<resources>
    <string name="app_name">SQlite</string>
    <string name="add">Add</string>
    <string name="details_page">Details Page</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="add_data">Add Data</string>
    <string name="read_data">Read Data</string>
    <string name="update_page">Update Page</string>
    <string name="update_data">Update Data</string>
    <string name="id">ID:</string>
    <string name="delete_data">Delete Data</string>
    <string name="update_or_delete_page">Update Or Delete Page</string>
    <string name="dataId">ID</string>
    <string name="name">Name</string>
    <string name="data_email">Email address</string>
    <string name="data_number">Contact Number</string>
    <string name="data_id">ID</string>
    <string name="data_name">Name</string>
    <string name="text_name">Name -</string>
    <string name="text_contact_number">Contact Number -</string>
    <string name="text_email_address">Email Address -</string>
</resources>